--- a/index.html
+++ b/index.html
@@ -130,6 +130,6 @@
     <footer class="footer">
         <p>© 2026 Minhas Finanças. Todos os direitos reservados.</p>
     </footer>
-<script type="module" src="app.js"></script>
+<script type="module" src="./dist/app.js"></script>
 </body>
 </html>
